--- a/client/new word/index.css
+++ b/client/new word/index.css
@@ -1,8 +1,12 @@
 *{
     margin: 0;  
     padding: 0;
+    
 }
-
+body{
+    background-image: url(https://toprope.com.ua/blog/wp-content/uploads/2018/01/toprope-wallpaper-georgia-1920x1080-01.jpg);
+    background-size: cover;
+}
 
 
 h1{
@@ -13,13 +17,30 @@ h1{
 }
 .til{
     display: flex;
-    width: 80vw;
+    width: 85vw;
     height: 80vh;
-    border: solid 1px black;
+    /* border: solid 1px black; */
     justify-content: space-between;
     margin-bottom: 0;
-    align-items: flex-start
+    align-items: flex-start;    
+    flex-wrap: wrap;
+    font-weight: bold;
 }
-.input{
+::placeholder{
+    color: black;
+}
+.input-group{
 
+    width: 50%;
+}
+.titel{
+    margin: 65px ;
+    display: flex;
+    font-family: sans-serif;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+}
+.nav {
+    color: white;
 }
