--- a/client/word test/index.css
+++ b/client/word test/index.css
@@ -1,84 +1,11 @@
-* {
-    margin: 0;
+p{
     padding: 0;
-    text-align: center;
-    color: blue;
+    margin: 0;
 }
-
-.night * {
-    color: aqua;
-}
-
-/* // Keyboards // */
-@keyframes style {
-    from {
-        background-position-x: 0px;
-    }
-
-    to {
-        background-position-x: 150px;
-    }
-}
-
-.keyboards {
-    background: none;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    width: 70vw;
-    margin: auto;
-    margin-top: 5vh;
-}
-
-.keyboards button {
-    display: block;
-    padding: 10px;
-    margin: 10vh 10%;
-    border: none;
-    background: linear-gradient(149deg, aqua, blue, aqua, blue);
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-    font-size: 2rem;
-    font-weight: bold;
-    box-shadow: 2px 2px solid transparent;
-    outline-color: blue;
-    outline-style: double;
-    outline-width: 5px;
-    border-radius: 50px;
-    animation-name: style;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;
-    animation-fill-mode: backwards;
-    animation-timing-function: linear;
-}
-
-.keyboards button:hover {
-    outline-color: red;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* //Example-screen// */
-.example-screen {
-    margin-top: 8vh;
+.req {
     text-align: center;
     height: 80px;
+    width: 50%;
 }
 
 @keyframes toTop {
@@ -128,14 +55,15 @@
         opacity: .3;
     }
 }
-.example-screen p {
+.req p {
     opacity: .3;
     position: relative;
     font-size: 1.2rem;
     font-weight: bold;
+    color: blue;
 }
 
-.example-screen .center {
+.req .center {
     animation-name: toCenter;
     animation-duration: .3s;
     animation-timing-function: linear;
@@ -145,10 +73,9 @@
     font-size: 22px;
     position: relative;
     top: 18px;
-    padding: 8px 0;
 }
 
-.example-screen .top {
+.req .top {
     animation-name: toTop;
     animation-duration: .3s;
     animation-timing-function: linear;
@@ -168,7 +95,7 @@
     animation-play-state: running;
 }
 
-.example-screen .bottom {
+.req .bottom {
     color: transparent;
     background: linear-gradient(180deg, blue, white);
     background-clip: text;
@@ -178,4 +105,12 @@
     animation-fill-mode: forwards;
     animation-delay: .2s;
     opacity: 0;
+}
+
+
+.container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 100vh;
 }
