--- a/client/index.css
+++ b/client/index.css
@@ -1,29 +1,31 @@
-* {
-    margin: 0%;
-    padding: 0%;
+/* * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
+}
 
+body {
+    background-color: #0000001A  !important;
 }
-body{
-    /* background-color: #0000001A  !important; */
-}
-img {
-    
-    width: 100%;
-    height: 100%;
-}
-.nav{
-    /* position: fixed;
+
+.nav {
+    position: fixed;
     position:relative; 
     margin: auto;
     display: flex;
     text-align: center;
-    justify-content: center; */
-    background-color: #0000001A  !important;
-    
-a {
-    text-decoration: none !important;
-}
-.container{
-    margin: 0 !important;
+    justify-content: center;
+    background-color: #000000 !important;
+
+    a {
+        text-decoration: none!important;
+    }
+
+    .container {
+        margin: 0 !important;
+    }
+
+*/
+.nav li a button{
+    color: white;
 }
